css/style.css
h1.title {
  font-size: 22px;
}

h1 {
  font-size: 19px;
}
h2 {
  font-size: 16px;
}
h3 {
  font-size: 14px;
}

p {
  margin: 0;
}

.level2 {
  padding: 1em 0;
}

p,
h2,
span,
li,
.indented-lines-after-first,
.indented-first-line {
  color: darkslategray;
}

a {
  color: steelblue;
}

.navbar-default .navbar-nav .open .dropdown-menu > li > a {
  color: #666666;
}
.navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
.navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
  color: #212121;
  background-color: transparent;
}
.navbar-default .navbar-nav .open .dropdown-menu > .active > a,
.navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
.navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
  color: #2f4f94;
  background-color: #eeeeee;
}

@media print {
  a[href]:after {
    display: none;
    visibility: hidden;
  }
}

#TOC.tocify {
  width: 25%;
  min-width: 200px;
  max-width: 280px;
  max-height: 85%;
}

.indented-lines-after-first {
  text-indent: -30px;
  padding-left: 30px;
}

.indented-first-line {
  text-indent: 30px;
  padding-left: 0;
  margin: 10px 0;
}

.vertical-space {
  margin: 10px 0;
}

.go-right {
  float: right;
  font-family: "Open Sans";
}

.width-7 {
  width: 7%;
}

.right-frame-15 {
  padding: 3px;
  border: 1px solid #ddd;
  box-shadow: 0 0 0 7px #fff, 0 0 0 8px #ddd;
  margin: 0 20px 0 0;
  width: 15%;
}

.small-font {
  font-size: 0.8em;
}

